--- a/two_page/control.html
+++ b/two_page/control.html
@@ -55,6 +55,7 @@
       var color = document.querySelector('#dot-color-input').value;
       dot.style.backgroundColor = color;
       localStorage.setItem('dotColor', color.value);
+      console.log(color);
     }
 
     function changeBackgroundColor() {
