hide controls working fully

--- a/two_page/control.html
+++ b/two_page/control.html
@@ -53,11 +53,7 @@
 
     function toggleControls() {
       var controlsBox = document.querySelector('#controls');
-      if (controlsBox.style.opacity === '0') {
-        controlsBox.style.opacity = '1';
-      } else {
-        controlsBox.style.opacity = '0';
-      }
+      controlsBox.classList.toggle('hidden');
     }
 
     function toggleFlash() {
