default values in controls box

--- a/two_page/control.html
+++ b/two_page/control.html
@@ -49,6 +49,14 @@
       localStorage.setItem('backColor', "#ffffff");
       localStorage.setItem('x', 300);
       localStorage.setItem('y', 300);
+
+      // Set default values in the input boxes
+      document.getElementById('dot-size-input').value = localStorage.getItem('size');
+      document.getElementById('flash-speed-input').value = localStorage.getItem('speed');
+      document.getElementById('dot-color-input').value = localStorage.getItem('dotColor');
+      document.getElementById('background-color-input').value = localStorage.getItem('backColor');
+      document.getElementById('x-coordinate-input').value = localStorage.getItem('x');
+      document.getElementById('y-coordinate-input').value = localStorage.getItem('y');
     }
 
     function toggleControls() {
@@ -111,8 +119,6 @@
         localStorage.setItem('y', y);
       }
     });
-
-
 
     function moveDot() {
       var dot = document.querySelector('.dot');
