defaults, but can change everything but position

--- a/two_page/control.html
+++ b/two_page/control.html
@@ -50,11 +50,16 @@
       localStorage.setItem('x', 300);
       localStorage.setItem('y', 300);
 
-      // Set default values in the input boxes
       document.getElementById('dot-size-input').value = localStorage.getItem('size');
       document.getElementById('flash-speed-input').value = localStorage.getItem('speed');
       document.getElementById('dot-color-input').value = localStorage.getItem('dotColor');
       document.getElementById('background-color-input').value = localStorage.getItem('backColor');
+
+      setInterval(updateControlVals, 10);
+      
+    }
+
+    function updateControlVals(){
       document.getElementById('x-coordinate-input').value = localStorage.getItem('x');
       document.getElementById('y-coordinate-input').value = localStorage.getItem('y');
     }
