--- a/two_page/control.html
+++ b/two_page/control.html
@@ -33,7 +33,7 @@
       <input type="number" id="y-coordinate-input" onchange="moveDot()">
     </div>
     <div>
-      <button onclick="toggleDisclaimer()">Toggle Disclaimer</button>  
+      <button onclick="toggleDisclaimer()">Show Disclaimer</button>  
       <button onclick="toggleFlash()">Toggle Flashing</button>
     </div>
 
